2007-08-25  Carlos Licea  <carlos_licea@hotmail.com>
    *MarbleWidget: solved the trace bug. As I expected the 
     problem was an exception for the Spherical projection
     tha wasn't needed in the flat projection.

2007-08-24  Murad Tagirov  <tmurad@gmail.com>

    - Parse IconStyle related tags.
      TODO: load pixmap specified in <href> tag
    * src/lib/kml/KMLIconStyle.{h,cpp}
    * src/lib/kml/KMLIconStyleParser.{h,cpp}
    * src/lib/kml/KMLColorStyleParser.cpp

    - Implemnted parsing of <IconStyle> tag
    * src/lib/kml/KMLStyle.{h,cpp}
    * src/lib/kml/KMLStyleParser.{h,cpp}

    - Display time spent to draw opened kml documents
    * src/lib/MarbleModel.cpp

2007-08-24  Carlos Licea  <carlos_licea@hotmail.com>
    *TextureColorizer: removed the differences of Spherical
     and Rectangular methods, now there's only 1 class for
     both.

2007-08-23  Murad Tagirov  <tmurad@gmail.com>

    Added new parsing classes
    * src/lib/kml/KMLColorStyleParser.{h,cpp} : new class
    * src/lib/kml/KMLLabelStyleParser.{h,cpp} : new class
    * src/lib/kml/KMLIconStyleParser.{h,cpp}  : new class

    Added KMLStyleParse class to parse KMLStyle objects.
    Minor fixes in previously introduced styles
    related classes.
    * src/lib/kml/KMLDocumentParser.{h,cpp}
    * src/lib/kml/KMLContainerParser.cpp
    * src/lib/kml/KMLStyleSelector.{h,cpp}
    * src/lib/kml/KMLStyleParser.{h,cpp}: new class
    * src/lib/kml/KMLDocument.{h,cpp}
    * src/lib/kml/KMLPlaceMarkParser.cpp
    * src/lib/CMakeLists.txt

    - Class diagram updated
    * docs/projects/kml/KMLClasses.xmi

2007-08-23  Torsten Rahn  <rahn@kde.org>

	- More cleanup in TextureMapper classes and
	better code documentation. Now it should be
	possible for other people to fully
	understand it.
	* src/lib/AbstractScanlineTextureMapper.{cpp,h}
	* src/lib/TileLoader.h
	* src/lib/GlobeScanlineTextureMapper.cpp
	* src/lib/FlatScanlineTextureMapper.cpp
	* ChangeLog
